# rim

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  basic.svelte  cimgui.c  demo.c  demo2.c  im.c  im.h  imgui.cpp  imgui.h  libui.c  main.c  nim.h  nim_internal.h  parse_enum.py  test.md  test.svelte  test_differ.c  test_tree.c  tree.c  tree.h  ui.c  vdom.c
.github/workflows/: build.yml
backends/: imgui-glfw-vulkan.cpp  imgui.cpp  libui.c
demo/: CMakeLists.txt  lua.c  main.c
doc/: evaluation.md  extensions.md  vdom.md  what.md
docs/: api.md  backend.md  backends.md  def.md  evaluation.md  extensions.md  imm_backend.md  inner-workings.md  name.md  next_prop.md  perf.md  performance.md  thread.md  vdom.md  what.md  why.md
etc/: rim.desktop  win.rc
examples/: demo.c  demo2.c  fudge.c  log.c  menus.c  minimal.c  remap.c  thread.c  ui.c  windows.c
examples/demo/: lua.c  main.c  script.h  script.lua
extensions/: libui_scintilla.c
libs/: lua.cmake
libs/lua-cmake/: CMakeLists.txt
src/: enum.c  im.c  im.h  libui.c  libui_scintilla.c  libui_scintilla.h  main.c  mainswitcher.c  nim.h  nim_internal.h  nsthread.m  rim.h  rim_internal.h  tree.c  vdom.c  wxwidgets.cpp
test/: demo.c  flaw.c  log.c  menus.c  test.c  test_differ.c  test_tree.c  thread.c  ui.c  windows.c
